# youtube_collector

./: cron__fetch_urls.py  cron__kaggle_job_yt_captions.py  cron__kaggle_job_yt_info_collection.py  cron__kaggle_job_yt_video_download.py  cron__llm_analysis_job.py  cron_creation_instructions.md  omniconf.py  pyproject.toml  run_cron_sequence.sh  slack_messenger.py  xml_parsing.py  yt_collector.md
settings_file/: settings.toml  yt_collector.toml
tests/: test_job_queue.py
yt_collector/: fetch_urls.py  job_queue.py  kaggle_job_caption.txt  kaggle_job_info_collection.txt  kaggle_job_video_download.txt  local_storage_utils.py
