[project]
author = 'kolikaran'
dependencies = [
  "crongle @ git+ssh://git@github.com/kolikaran1992/crongle.git",
  "yt-dlp (>=2025.10.22,<2026.0.0)",
  "browser-cookie3 (>=0.20.1,<0.21.0)",
  "secretstorage (>=3.4.0,<4.0.0)",
  "dynaconf (>=3.2.12,<4.0.0)",
  "pandas (>=2.3.3,<3.0.0)",
]
description = "Add your description here"
name = "youtube_summarizer"
readme = "README.md"
requires-python = ">=3.10,<4.0"
version = "0.1.0"
